# LogViewer

./: CMakeLists.txt  mainwindow.glade  mapwindow.glade  polarwindow.glade  windwindow.glade
src/: log.c  log.h  main.c  map.c  map.h  plot.c  plot.h  polar.c  polar.h  serialization.c  serialization.h  timeline.c  timeline.h  wind.c  wind.h
